# rust-tools

./: .gitignore  Procfile  README.md  app.py  appSettings.py  app_settings.py  functions.py  heroku.yml  main.py  pyproject.toml  pythonFunctions.py  python_functions.py  requirements.txt  scraper.py  suggestScraper.py  test.json  test.py  testextractor.py  wsgi.py
consoleapp/: main.py
consoleapp/wip/: test.py
rrcc_app/expedited/homepage/: views.py
rrcc_app/expedited/rrcc_app/: settings.py  wsgi.py
rrcc_app[DEPRECATED]/: manage.py  pythonFunction.py
rrcc_app[DEPRECATED]/expedited/rrcc_app/: asgi.py  (+1 more)
static/: buildingSuggests.json  deployableSuggests.json  index.js  itemSuggests.json  recycletool.js  style.css  style_homepage.css  style_raidtool.css  style_recycletool.css  style_standards.css  style_template.css  template.css  vehicleSuggests.json
static/depr/: style_legacy.css
static/new_templates/: homePage.css  homePage.html  index.css  index.html  template.css  template.html
templates/: a.py  devPage.html  homePage.html  index.html  index_legacy.html  loginPage.html  pageNotFound.html  raidtool.html  recycletool.html  template.html
templates/old-templates/: index_legacy.html
webapp/: app.py  index.html  pyscript.py  pythonFunctions.py  script.py  style.css  test.py
webapp/backup/: oldindex.html
webapp/static/: allSuggests.json  buildingSuggests.json  deployableSuggests.json  index.js  style.css  suggests.json  vehicleSuggests.json
webapp/templates/: home.html  index.html
wip/: __init__.py  script.js  test.py
wip/test-files/: test.json
(+6 files in other folders)
