[tool.poetry]
name = "rust-raid-cost-calculator"
version = "0.1.0"
description = ""
authors = ["Bernd van Ruremonde <berndvanruremonde@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.5"
flask = "^3.0.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
